Fix bug where attributes pane appears below list
Fixes #1029
Fixes #1272

Looks like this bug cropped back up with dfd4808d4d17c6c5569e36fc7a5b4657c93e54c1. I couldn't figure out what the change in that commit was trying to do so I'm guessing it was for a good reason but other changes to the HTML or CSS since then have made it not work well. I removed the rules added in the commit and the attributes pane looks "right" at all browser widths (up to ~2600px wide at least). It doesn't look great at super narrow widths but that's expected and a much harder fix.

I also put a max width on the attributes list since it's scrollable anyway and having it expand proportionally with the page width looks weird. Giving the attributes pane more space at wide widths makes more sense as it can have much more info.

--- a/src/css/metacatui-common.css
+++ b/src/css/metacatui-common.css
@@ -1594,6 +1594,7 @@ body > .alert-container {
   padding-bottom: 25px;
 }
 .attributeList > .row-fluid > .span2 {
+  max-width: 300px;
   max-height: 700px;
   overflow: scroll;
   width: 25%;
@@ -2319,7 +2320,7 @@ section#user-citations {
     	margin-left: 0px;
     	padding: 20px;
     	width: 85%;
-    	width: calc(100% - 180px);
+			width: calc(100% - 180px);
 }
 .entitydetails tr,
 .entitydetails table,
